--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,13 +1,16 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="moldsawski.movie.controller.App"
-	xmlns:html="http://www.w3.org/1999/xhtml">
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="moldsawski.movie.controller.App">
 	<App>
-		<pages>
 				<Page title="{i18n>title}" id="page">
+					<landmarkInfo>
+		                <PageAccessibleLandmarkInfo rootRole="Main" rootLabel="{i18n>landmarkMainPage}" contentRole="Region" contentLabel="{i18n>landmarkContent}" headerRole="Region" headerLabel="{i18n>title}" footerRole="ContentInfo" footerLabel="{i18n>landmarkFooter}"/>
+					</landmarkInfo>
+
+						
 					<content>
 						<Image id="image0" src="images/MoviesHeader.png" alt="Movie" height="140px" tooltip="Movie Banner" width="100%" visible="{=!${device>/system/phone}}"/>
 						<f:SimpleForm xmlns:f="sap.ui.layout.form" xmlns:sap.ui.core="sap.ui.core" editable="true" id="form0" columnsM="2" columnsL="3" columnsXL="3" title="{i18n>title}">
 							<f:content>
-								<sap.ui.core:Title text="Find Movies" id="title0"/>
+								<sap.ui.core:Title text="{i18n>titleForm}" id="title0"/>
 								<Label text="City" width="100%" labelFor="city"/>
 								<SearchField xmlns="sap.m" placeholder="Enter City" id="city"/>
 								<Label text="Genre" width="100%" labelFor="genre"/>
@@ -20,7 +23,7 @@
 									</items>
 								</Select>
 								<Label/>
-								<Button xmlns="sap.m" text="Find Movie" id="button1" type="Emphasized" class="sapUiSmallMarginTop" press="onPress"/>
+								<Button xmlns="sap.m" text="{i18n>buttonMovieSearch}" id="button1" type="Emphasized" class="sapUiSmallMarginTop" press="onPress"/>
 							</f:content>
 						</f:SimpleForm>
 						<PlanningCalendar id="calendar" appointmentsVisualization="Filled" showWeekNumbers="true" startDate="{path: 'movies>/initDate', formatter:'.formatFunc'}" rows="{movies>/movies}" appointmentSelect="onAppointmentSelect(${$parameters>/appointment})">
@@ -35,10 +38,15 @@
 								</PlanningCalendarRow>
 							</rows>
 						</PlanningCalendar>
-						<Toolbar width="100%" id="toolbar1"/>
 					</content>
+                    <footer>
+                    	<Bar>
+                    	    <contentLeft>
+                    	        <Button xmlns="sap.m" text="Button" id="button0"/>
+                    	    </contentLeft>
+                    	</Bar>
+                    </footer>
 				</Page>
 
-		</pages>
 	</App>
 </mvc:View>
